src/test/deca/syntax/invalid/sansObjets/oubliParenthesage.deca
// Description:
//    tests de programme incorrect lexicalement (oubli de parenthese)
//
// Historique:
//    @DATE@

{
    int x = ((5 + 7) / 7 - 9 * 5));
}